# desafio-backend-infograficos

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: python-app.yml
docker/: services.docker-compose.yml
infografia_admin/job/app/: utils.py
infografia_admin/job/app/config/: settings.py
infografia_admin/job/app/dto/: city.py  state.py  weather.py
infografia_admin/job/app/interfaces/: admin_api.py  command.py  ibge.py  task.py  weatherstack.py
infografia_admin/job/app/interfaces/builder/: state_builder.py
infografia_admin/job/app/interfaces/entities/: city.py  state.py
infografia_admin/job/app/interfaces/factory/: state_factory.py
infografia_admin/job/infra/api/adm_api/location/: location.py
infografia_admin/job/infra/api/adm_api/location/commands/: create_city.py  create_state.py
infografia_admin/job/infra/api/adm_api/weather/: weather.py
infografia_admin/job/infra/api/adm_api/weather/commands/: create_weather.py
infografia_admin/job/infra/api/ibge/: ibge.py
infografia_admin/job/infra/api/ibge/commands/: list_city.py  list_state.py
infografia_admin/job/infra/api/weatherstack/: weatherstack.py
infografia_admin/job/infra/api/weatherstack/commands/: get_current_weather.py
infografia_admin/job/infra/base/: command.py
