[tool.poetry]
name = "infografia_admin"
version = "0.0.0"
description = "."
authors = ["Giovani Liskoski Zanini <giovanilzanini@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
django = "^4.1.7"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.1"
mysqlclient = "^2.1.1"
schedule = "^1.1.0"
pydantic = "^1.10.5"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
